# mawaqeet

./: Cargo.toml  README.md  flake.nix  index.html  mawaqeet-14d15d7d41da7cf4.js  mawaqeet-14d15d7d41da7cf4_bg.wasm  mawaqeet-3733d72660ae3eff.js  mawaqeet-3733d72660ae3eff_bg.wasm  mawaqeet-53458c0457a36f50.js  mawaqeet-53458c0457a36f50_bg.wasm  mawaqeet-56f3148d42c8bfc4.js  mawaqeet-56f3148d42c8bfc4_bg.wasm  mawaqeet-5ba70b6248d2420b.js  mawaqeet-5ba70b6248d2420b_bg.wasm  mawaqeet-ae6f013c14b3133f.js  mawaqeet-ae6f013c14b3133f_bg.wasm  mawaqeet-aef4fb37c598eb7b.js  mawaqeet-aef4fb37c598eb7b_bg.wasm  mawaqeet-ba0b910b91a27456.js  mawaqeet-ba0b910b91a27456_bg.wasm  mawaqeet-bf3b52724cb146da.js  mawaqeet-bf3b52724cb146da_bg.wasm  mawaqeet-cf13a9b91c2403f1.js  mawaqeet-cf13a9b91c2403f1_bg.wasm  mawaqeet-d605be454a90ada5.js  mawaqeet-d605be454a90ada5_bg.wasm  mawaqeet-fcb4d900092c7d41.js  mawaqeet-fcb4d900092c7d41_bg.wasm
.github/workflows/: publish.yml
snippets/dioxus-interpreter-js-dab579f08da5298b/: inline0.js
src/: arendal.xlsx  main.rs  spreadsheet.rs
