[package]
name = "mawaqeet"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"

[dependencies]
anyhow = "1.0.69"
calamine = "0.19.1"
console_error_panic_hook = "0.1.7"
dioxus = "0.3.1"
dioxus-web = "0.3.0"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
