[package]
name = "mawaqeet"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"

[dependencies]
anyhow = "1.0.69"
calamine = "0.19.1"
dioxus = "0.3.1"
dioxus-web = "0.3.0"
js-sys = "0.3.61"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
